--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
     },
     "AllowedHosts": "*",
   "Links": {
-    "MedicineStock": "http://http://20.193.137.29//api/MedicineStock/"
+    "MedicineStock": "http://20.193.137.29//api/MedicineStock/"
   }
 }
